fix(header): add box-shadow on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -21,6 +21,7 @@ header {
   color: var(--e-color-ground);
   padding: var(--e-space-1)
     calc((100% - var(--e-max-width-1)) / 2 - var(--e-space-2));
+  position: relative;
 }
 
 header > div {
